[gd_scene load_steps=2 format=3 uid="uid://107vjeby0y1r"]

[ext_resource type="Script" path="res://ui/objective_card/objective_card.gd" id="1_no1ff"]

[node name="ObjectiveCard" type="PanelContainer"]
offset_right = 132.0
offset_bottom = 32.0
size_flags_horizontal = 8
size_flags_vertical = 0
script = ExtResource("1_no1ff")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 10)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ObjectiveName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.937255, 0.909804, 1)
text = "Objective Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="ObjectiveDescription" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.937255, 0.909804, 1)
theme_override_constants/line_spacing = -4
text = "Collect X of resource"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2
